Wed Aug  1 16:05:49 2001  Carlos O'Ryan  <coryan@uci.edu>

        * Merged changes from the fix_886 branch

        Tue Jul 31 09:17:49 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Intrusive_List.h:
        * ace/Intrusive_List.inl:
          Add new methods to access the head and tail of the list.

        * ace/Intrusive_List.cpp:
          Fixed the implementation of remove(), if the element to be
          removed was the last on the list it wasn't removed at all.
          Left some code to check invariants, have to find a way to keep
          that code around with some optional compilation flags.

        Thu Jul 26 16:50:54 2001  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile:
        * ace/Makefile.am:
        * ace/Makefile.bor:
        * ace/Intrusive_List.h:
        * ace/Intrusive_List.inl:
        * ace/Intrusive_List.cpp:
          Add new template to implement intrusive lists, i.e. lists that
          assume their elements implement the next() and prev() methods.

        * ace/Intrusive_List_Node.h:
        * ace/Intrusive_List_Node.inl:
        * ace/Intrusive_List_Node.cpp:
          Helper class to add the requirements of ACE_Intrusive_List to
          any other class, simply do:
          class Foo : public ACE_Intrusive_List_Node<Foo>

Wed Aug  1 15:57:35 2001  Ossama Othman  <ossama@uci.edu>

        * ace/Message_Block.cpp (release, release_i):

          Obtain the pointer to the allocator from the object that will be
          destroyed before calling ACE_DES_FREE on the object.  Previously
          we were obtaining the allocator after the object was destroyed,
          due to the way the ACE_DES_FREE macro works.  Thanks to Hyman
          Rosen <hyrosen@mail.com> for reporting the problem, and to
          Carlos for suggesting a fix.  [Bug 992]

Wed Aug  1 15:00:21 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

        * ace/Log_Record.{h,i}: Changed msg_data_len() from a "setter"