@@ -1,3 +1,8 @@
+Thu Aug 02 06:59:39 2001  Steve Huston  <shuston@riverace.com>
+
+        * ace/Basic_Types.h (ACE_SIZEOF_WCHAR): If ACE_HAS_XPG4_MULTIBYTE_CHAR
+          is defined, use sizeof(wchar_t) to set ACE_SIZEOF_WCHAR.
+
 Wed Aug  1 16:05:49 2001  Carlos O'Ryan  <coryan@uci.edu>
 
         * Merged changes from the fix_886 branch
